--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,32 +5,24 @@
   --foreground: #18181b;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.dark {
+  --background: #18181b;
+  --foreground: #f4f4f5;
 }
 
-@theme {
+@theme inline {
+  --color-blacktheme: var(--background);
+  --color-whitetheme: var(--foreground);
   --color-deepBlue: #090040;
   --color-deepPurple: #471396;
   --color-brightPurple: #b13bff;
   --color-accentYellow: #ffcc00;
-  --color-darkZinc: #18181b;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #18181b;
-    --foreground: #f4f4f5;
-  }
 }
 
 body {
-  background: var(--background);
+  background-color: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-jetbrains), Helvetica, sans-serif;
 }
 
 @layer utilities {
