--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-jetbrains), Helvetica, sans-serif;
+  scroll-behavior: smooth;
 }
 
 @layer utilities {
